fixed spacing on image gallery and main image

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1137,7 +1137,7 @@ a:focus,.focus a{
 				&.woocommerce-product-gallery--columns-4{
 					.flex-control-nav{
 						&.flex-control-thumbs{
-							margin-bottom: 50px;
+							margin: 50px 0;
 							align-items: space-between;
 							li{
 								float: none !important;
